# GPT-wrapper-boilerplate

./: .env.example  .gitignore  .gitmodules  README.md  activate_env.bat  docker-compose.yml  fix_dependencies.bat  run_tests.bat  run_tests.ps1  run_tests.py  run_tests.sh
backend/: Dockerfile  __init__.py  pyproject.toml  pytest.ini  run_tests.py
backend/app/: main.py
backend/app/application/: README.md
backend/app/domain/: README.md  __init__.py  conversation_repository.py
backend/app/infrastructure/: README.md  container.py  event_bus.py
backend/app/use_cases/: submit_request_use_case.py
backend/tests/: __init__.py  conftest.py
backend/tests/application-layer/: test_cache_service.py  test_conversation_persistence_port.py  test_gpt_api_port.py  test_gpt_request_port.py  test_manage_session_lifecycle_use_case.py  test_process_response_use_case.py  test_rate_limiter_service.py  test_security_service.py  test_submit_request_use_case.py
backend/tests/domain/: test_prompt_service.py
backend/tests/domain-layer/: test_cached_response.py  test_domain_events.py  test_gpt_request.py  test_gpt_response.py  test_prompt_formatter.py  test_user_context.py
backend/tests/fixtures/: __init__.py  conversation_fixtures.py  copilotkit_fixtures.py  graphql_fixtures.py
backend/tests/infrastructure-layer/: __init__.py  conftest.py  test_authentication_service.py  test_authorization_service.py  test_cache_adapter.py  test_copilotkit_graphql_error_handling.py  test_copilotkit_graphql_mutations.py  test_copilotkit_graphql_queries.py  test_copilotkit_graphql_schema.py  test_encryption.py  (+4 more)
(+50 files in other folders)
